--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "askme",
   "private": true,
   "dependencies": {
+    "@claviska/jquery-minicolors": "^2.3.4",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "jquery": "^3.4.1",
+    "jquery-minicolors": "^2.1.10",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
